# boxman

./: Cargo.toml  README.md
boxman_game/: Cargo.toml
boxman_game/assets/config/: multiplayer.ron  weapons.ron
boxman_game/assets/data/: character.ron  controls.ron  multiplayer.ron
boxman_game/src/: character.rs  config.rs  main.rs  moveable_vis.rs  player.rs
boxman_game/src/client/: mod.rs  snapshot.rs
boxman_game/src/net/: mod.rs  snapshot.rs
boxman_server/: Cargo.toml
boxman_server/src/: bots.rs  lib.rs  player.rs  snapshot.rs
boxman_shared/: Cargo.toml
boxman_shared/src/: character.rs  data.rs  lib.rs  moveable_sim.rs  player.rs  protocol.rs  snapshot.rs  types.rs  utils.rs  weapons.rs
