[workspace]
resolver = "2"
members = ["boxman_game", "boxman_server", "boxman_shared"]


[workspace.dependencies]
bevy = { version = "0.15.2", features = ["serialize"] }
bevy_config_stack = { git = "https://github.com/BrianWiz/bevy_config_stack.git", branch = "main", package = "bevy_config_stack" }
bevy_renet = "1.0.0"
avian3d = "0.2.1"

serde = { version = "1.0.217", features = ["derive"] }
ron = "0.8.1"
directories = "6.0.0"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
