[package]
name = "boxman_game"
version = "0.1.0"
edition = "2021"

[dependencies]
boxman_shared = { path = "../boxman_shared" }
boxman_server = { path = "../boxman_server" }
avian3d.workspace = true
bevy.workspace = true
bevy_renet.workspace = true
bevy_config_stack.workspace = true
serde.workspace = true
ron.workspace = true
directories.workspace = true
clap.workspace = true
bincode.workspace = true

[dev-dependencies]
serial_test = "3.2.0"
rand = "0.9.0"
pretty_assertions = "1.4.1"
